--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ decorator==5.0.9
 Django==2.2
 django-extensions==3.1.3
 django-location-field==2.1.0
+django-rest-framework==0.1.0
+djangorestframework==3.12.4
 geographiclib==1.50
 geopy==2.1.0
 ipdb==0.13.9
@@ -17,6 +19,7 @@ prompt-toolkit==3.0.18
 psycopg2==2.8
 ptyprocess==0.7.0
 Pygments==2.9.0
+python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.1
