--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-rest-framework==0.1.0
 djangorestframework==3.12.4
 geographiclib==1.50
 geopy==2.1.0
+install==1.3.4
 ipdb==0.13.9
 ipython==7.16.1
 ipython-genutils==0.2.0
